--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 	margin-left: 4px;
 }
 
+.timeline-chunk-active > .timeline-chunk-inner,
 .timeline-chunk-active ~ .timeline-chunk > .timeline-chunk-inner {
 	width: 0;
 }
@@ -34,7 +35,7 @@ body {
 	border-radius: inherit;
 }
 
-.player-content {
+.player-content-wrapper {
 	position: relative;
 }
 
